@@ -40,8 +40,11 @@
 - Amends 'SyncAPFS' Implementation
   * This feature is now activated by default and has been removed from the configuration file
   * Users can however deactivate it via the new 'decline_help_apfssync' configuration token
-- Renames 'ignore_tag_help' as 'decline_help_hidetags'
-    * The 'decline_help_XYZ' format will be used for options to disable defaults (align with rEFInd)
+- Renames Misc Configuration Tokens
+    * The 'decline_help_XYZ' format will be used for options to disable divergent defaults
+    * 'sync_apfs' as 'decline_help_apfssync'
+    * 'ignore_tag_help' as 'decline_help_hidetags'
+    * 'scan_other_esp' as 'decline_help_scanesp'
 
 
 0.13.2.AG (03 Aug 2021):
